Rewrite grammar so that generated class names are not abbreviated
Further rewrites:

 * Use ANTLR's list label operator (+=) when tracking several tokens so
   so that their generated lists can be referenced through a field.

 * Define lexer rules for the rest of the operators and combine parser rule
   alternatives for comparison expressions.

 * Rename enum SrcType -> Type.

 * Use a rule alternative label called ArithmeticExpression for both
   multiplicative and additive expressions.
   Everything done by the old utility method for generating different
   arithmetic expressions can now be done in the single visit method.