@@ -1,46 +1,47 @@
 package notc.semantics;
 
-import notc.antlrgen.NotCParser.SrcType;
+import notc.antlrgen.NotCParser.Type;
 
 import org.antlr.v4.runtime.Token;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.LinkedList;
+import java.util.ArrayDeque;
+import java.util.Map;
 import java.util.HashMap;
 
-/* Class used to resolve types in the semantic analysis environment:
- * Function ids to signatures and variables to declared types. */
-public class SymbolTable {
+// Resolves types in the semantic analysis environment:
+// Function ids to signatures and variables to declared types.
+class SymbolTable {
 
     // Functions
-    private HashMap<String,FunType> signatures;
+    private HashMap<String,FunctionType> signatures;
     // Variables (a stack for scoping)
-    private LinkedList<HashMap<String,SrcType>> vars;
+    private ArrayDeque<Map<String,Type>> variables;
 
     SymbolTable() {
-        signatures = new HashMap<String,FunType>();
-        vars = new LinkedList<HashMap<String,SrcType>>();
+        signatures = new HashMap<String,FunctionType>();
+        variables = new ArrayDeque<Map<String,Type>>();
         // Add signatures of built-in functions
-        signatures.put("printInt",    new FunType(SrcType.VOID,    List.of(SrcType.INT)));
-        signatures.put("printDouble", new FunType(SrcType.VOID,    List.of(SrcType.DOUBLE)));
-        signatures.put("printString", new FunType(SrcType.VOID,    List.of(SrcType.STRING)));
-        signatures.put("readInt",     new FunType(SrcType.INT,     Collections.emptyList()));
-        signatures.put("readDouble",  new FunType(SrcType.DOUBLE,  Collections.emptyList()));
-        signatures.put("readString",  new FunType(SrcType.STRING,  Collections.emptyList()));
+        signatures.put("printInt",    new FunctionType(Type.VOID,   List.of(Type.INT)));
+        signatures.put("printDouble", new FunctionType(Type.VOID,   List.of(Type.DOUBLE)));
+        signatures.put("printString", new FunctionType(Type.VOID,   List.of(Type.STRING)));
+        signatures.put("readInt",     new FunctionType(Type.INT,    Collections.emptyList()));
+        signatures.put("readDouble",  new FunctionType(Type.DOUBLE, Collections.emptyList()));
+        signatures.put("readString",  new FunctionType(Type.STRING, Collections.emptyList()));
     }
 
     // Called in a first pass through the program to add all function declarations
-    void addFun(Token idTok, FunType ft) {
+    void addFun(Token idTok, FunctionType funType) {
         String funId = idTok.getText();
         if (signatures.containsKey(funId))
             throw new SemanticException(idTok, "Redefinition of function");
-        signatures.put(funId, ft);
+        signatures.put(funId, funType);
     }
 
     // When a function body is to be checked, add its parameters as local variables.
-    void setContext(List<SrcType> paramTypes, List<Token> paramIds) {
-        vars.clear();
+    void setContext(List<Type> paramTypes, List<Token> paramIds) {
+        variables.clear();
         pushScope();
         // Guaranteed by parser to be of same length
         int paramListLen = paramIds.size();
@@ -50,19 +51,29 @@ public class SymbolTable {
 
     // Enter block
     void pushScope() {
-        vars.push(new HashMap<String,SrcType>());
+        variables.push(new HashMap<String,Type>());
     }
 
     // Leave block
     void popScope() {
-        vars.pollFirst();
+        variables.pollFirst();
+    }
+
+    void addVar(Type t, Token idTok) {
+        if (t.isVoid())
+            throw new SemanticException(idTok, "Variables cannot have type void");
+        Map<String,Type> outermostScope = variables.peekFirst();
+        String varId = idTok.getText();
+        if (outermostScope.containsKey(varId))
+            throw new SemanticException(idTok, "Redefinition of variable");
+        outermostScope.put(varId, t);
     }
 
     // Start looking in outermost scope and return when a match is found
-    SrcType lookupVar(Token idTok) {
+    Type lookupVar(Token idTok) {
         String varId = idTok.getText();
-        SrcType t;
-        for (HashMap<String,SrcType> scope : vars) {
+        Type t;
+        for (Map<String,Type> scope : variables) {
             t = scope.get(varId);
             if (t != null)
                 return t;
@@ -70,20 +81,11 @@ public class SymbolTable {
         throw new SemanticException(idTok, "Undefined variable");
     }
 
-    void addVar(SrcType t, Token idTok) {
-        if (t.isVoid())
-            throw new SemanticException(idTok, "Variables cannot have type void");
-        HashMap<String,SrcType> outermostScope = vars.peekFirst();
-        String varId = idTok.getText();
-        if (outermostScope.containsKey(varId))
-            throw new SemanticException(idTok, "Redefinition of variable");
-        outermostScope.put(varId, t);
-    }
-
-    FunType lookupFun(Token idTok) {
-        FunType sig = signatures.get(idTok.getText());
-        if (sig != null)
-            return sig;
+    // Used when type checking function calls
+    FunctionType lookupFun(Token idTok) {
+        FunctionType signature = signatures.get(idTok.getText());
+        if (signature != null)
+            return signature;
         throw new SemanticException(idTok, "Undefined function");
     }
 
